--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,42 @@
-/* YOUR CSS HERE */
+* {box-sizing: border-box;}
+body {margin: 0; padding: 0;}
+
+.header-container {
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    align-items: center;
+    padding: 2rem .5rem;
+    border-bottom: solid black 1px;
+    margin-bottom: 1.5rem;
+}
+
+.logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    h1 {
+        margin: 0;
+    }
+    p {
+        margin: 0;
+    }
+}
+
+small {
+    display: none;
+    font-size: 10px;
+    width: 100px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
