--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,6 +8,7 @@ body {margin: 0; padding: 0; font-family: "Manrope";}
     align-items: center;
     padding: 2rem .5rem;
     border-bottom: solid black 1px;
+    background-color: rgb(120, 9, 9);
 }
 
 .logo {
@@ -16,15 +17,23 @@ body {margin: 0; padding: 0; font-family: "Manrope";}
     align-items: center;
 }
 
+.logo img {
+    border-radius: 50%;
+}
+
 .title {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    color: white;
     h1 {
         margin: 0;
+        font-weight: 800;
+        
     }
     p {
         margin: 0;
+        font-style: italic;
     }
 }
 
@@ -36,6 +45,7 @@ small {
 
 main {
     background-color: rgb(250, 250, 250);
+    min-height: 100vh;
 }
 
 .list {
@@ -72,6 +82,7 @@ main {
 
 .product-item-upper img {
     width: 100%;
+    
 }
 
 .product-item-lower {
@@ -107,6 +118,103 @@ main {
     background-color: white;
 }
 
+.cart {
+    padding-top: 2.5rem;
+    background-color: rgb(164, 27, 27);
+    color: white;
+    font-weight: 800;
+    height: 100%;
+    width: 400px;
+    max-width: 100%;
+    position: fixed;
+    top: 0;
+    right: -400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    transition: .3s ease-in-out;
+    z-index: 1;
+    overflow: scroll;
+    scrollbar-width: none;
+
+}
+
+.cart.active {
+    right: 0;
+    box-shadow: 10px 10px 10px 20px rgba(0, 0, 0, 0.3);
+}
+
+.cart-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: .5rem;
+    h3, h4 {margin: 0;}
+}
+
+.cart-product-card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    border: 1px solid, black;
+    border-radius: 10px;
+    padding: 1rem 2rem;
+    background-color: white;
+    color: black;
+    max-height: 180px;
+    width: 80%;
+}
+
+.cart-product-card-image {
+    padding: 0 .5rem;
+    margin: 0 .5rem;
+
+    img {
+        max-height: 100px;
+        max-width: 100px;
+    }
+}
+
+.cart-product-card-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .5rem;
+}
+
+.quant-btns {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.quant-inc-dec {
+    display: flex;
+    gap: .6rem;
+    align-items: center;
+
+    button {
+        background-color: rgb(0, 156, 0);
+    }
+
+    svg {
+        width: 1rem;
+        height: 1rem;
+    }
+}
+
+.quantity {
+    margin: 0;
+}
+
+button.remove {
+ width: 100%;    
+ background-color: rgb(213, 7, 7);;   
+}
+
 footer {
     display: flex;
     justify-content: center;
@@ -131,6 +239,7 @@ footer {
     right: 2rem;
     transition: .2s ease-in-out;
     background-color: rgb(0, 156, 0);
+    z-index: 1;
 }
 
 .open-cart:hover {
